# AI-Drug-Peptide

./: .env.example  README.md  VERSION_STRUCTURE.md  launch.py  pyproject.toml  setup.py  test_peptide_screening_fixes.py
.github/workflows/: ci.yml  security.yml
config/: config.json
output/: optimized_peptide_library_20251023_030641.xlsx
src/core/data/: manager.py
src/core/reporting/: __init__.py
versions/: README.md
versions/1.0.0/: .gitignore  CHANGELOG.md  LICENSE  QUICK_START.md  USAGE.md  VERSION.md  install.py  requirements.txt  setup.py
versions/1.0.0/config/: report_config.json
versions/1.0.0/data/: setup_target_proteins.sql
versions/1.0.0/installers/: install.ps1  install.sh
versions/1.0.0/src/: main.py
versions/1.0.0/src/core/: __init__.py
versions/1.0.0/src/core/analysis/: engine.py
versions/1.0.0/src/core/workflow/: orchestrator.py
versions/1.0.0/src/tests/: demo_report.py  demo_step2.py  test_secretion_analysis.py  test_step2.py  test_string_interaction.py
versions/1.1.0/: CONTRIBUTING.md  Dockerfile  INSTALLATION.md  PEPTIDE_SCREENING_FIXES.md  README_EN.md  SYSTEM_DOCUMENTATION.md  VERSION.md  dashboard.py  docker-compose.yml  tmhmm-wrapper.sh
versions/1.1.0/config/: config.yaml
versions/1.1.0/data/: insert_thbs1_data.sql
versions/1.1.0/src/core/reporting/: generator.py
versions/1.1.0/src/core/utils/: __init__.py  manager.py
versions/1.1.0/src/tests/: demo_input_init.py  test_input_init.py
